--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h2></h2>
 		</div>
 		<!-- 仅自动播放音乐 -->
-		<audio loop src="img/qianyuqianxun.mp3" id="audio" autoplay preload="auto">该浏览器不支持audio属性</audio>
+		<audio loop src="img/womenlia.mp3" id="audio" autoplay preload="auto">该浏览器不支持audio属性</audio>
 		<script type="text/javascript">
 		//--创建页面监听，等待微信端页面加载完毕 触发音频播放
 		// document.getElementById("demo").innerHTML = "Happy Chinese Valentine's Day, my love!";
